--- a/index.html
+++ b/index.html
@@ -39,8 +39,16 @@
             <div id="overlay" onclick="off()">
                 <iframe
                     id="video"
-                    src="https://www.djivideos.com/watch/468602a3-956e-403d-bf34-ef6417e8904e?autoplay=false"
+                    src="https://www.youtube.com/embed/m5WvcXp2dqU"
                     frameborder="0"
+                    allowfullscreen
+                    title="YouTube video player"
+                    frameborder="0"
+                    allow="accelerometer; 
+                        clipboard-write; 
+                        encrypted-media; 
+                        gyroscope; 
+                        picture-in-picture"
                     allowfullscreen
                 ></iframe>
             </div>
